<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_weight="100">

    <TextView
        android:id="@+id/fourItem1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="25"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/Item1"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/fourItem2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="25"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/Item2"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/fourItem3"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="25"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/Item3"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/fourItem4"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="25"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/Item4"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="10sp"/>

</LinearLayout>
