<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.facturas.julian.mobilefacturas.Loggin"
    android:orientation="vertical"
    android:weightSum="19">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="horizontal">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="horizontal"
        android:layout_gravity="left"
        android:weightSum="4"
        android:gravity="center_horizontal|center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/LogginLblCodigo"
            android:id="@+id/LoginTxtCodigo"
            android:gravity="bottom|right"
            android:textSize="25dp"
            android:textStyle="bold"
            android:paddingBottom="15dp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:inputType="text"
            android:id="@+id/LoginEditTextCodigo"
            android:gravity="center_horizontal|bottom"
            android:textStyle="bold"
            android:textSize="25dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/LogginLblNombre"
            android:id="@+id/LoginTxtNombre"
            android:textAlignment="center"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="20dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:gravity="center_vertical|center_horizontal"
        android:weightSum="6">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/LogginBtnIngresar"
            android:id="@+id/LoginBtnIngresar" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:gravity="center_vertical|center_horizontal"
        android:weightSum="6">
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/LogginLblVersionBD"
        android:id="@+id/LoginTxtVersionBD"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/LogginLblVersionSoft"
        android:id="@+id/LoginTxtVersionSoft"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/LogginLblBluetooth"
        android:id="@+id/LoginTxtBluetooth"
        android:layout_weight="1"/>
</LinearLayout>
