<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:weightSum="6"
    android:background="@color/fondo_formulario"
    tools:context="com.facturas.julian.mobilefacturas.FormConfiguracion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ConfiguracionLblServidor"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ConfiguracionLblServidor"
            android:gravity="center_vertical|right"
            android:textColor="@color/label"/>

        <EditText
            android:id="@+id/ConfiguracionTxtServidor"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:inputType="text"
            android:gravity="center_vertical|left"
            android:textColor="@color/cajas_texto"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ConfiguracionLblPuerto"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ConfiguracionLblPuerto"
            android:gravity="center_vertical|right"
            android:textColor="@color/label"/>

        <EditText
            android:id="@+id/ConfiguracionTxtPuerto"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:inputType="number"
            android:gravity="center_vertical|left"
            android:textColor="@color/cajas_texto"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ConfiguracionLblModulo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ConfiguracionLblModulo"
            android:gravity="center_vertical|right"
            android:textColor="@color/label"/>

        <EditText
            android:id="@+id/ConfiguracionTxtModulo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:inputType="text"
            android:gravity="center_vertical|left"
            android:textColor="@color/cajas_texto"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ConfiguracionLblWebService"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ConfiguracionLblWebService"
            android:gravity="center_vertical|right"
            android:textColor="@color/label"/>

        <EditText
            android:id="@+id/ConfiguracionTxtWebService"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:inputType="text"
            android:gravity="center_vertical|left"
            android:textColor="@color/cajas_texto"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="10"
        android:gravity="center_vertical|center_horizontal">

        <CheckBox
            android:id="@+id/ConfiguracionChkFotosOnLine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:text="@string/ConfiguracionLblLimiteDistancia"
            android:textColor="@color/label"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="3"
        android:gravity="center_vertical|center_horizontal">

        <Button
            android:id="@+id/ConfiguracionBtnGuardar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/ConfiguracionBtnGuardar"
            android:textColor="@color/botones"/>
    </LinearLayout>
</LinearLayout>
